Add a short description of what the page is for

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
   },
   "vscodeMarkdownNotes.noteCompletionConvention": "noExtension",
   "git.confirmSync": false,
-  "git.rebaseWhenSync": true
+  "git.rebaseWhenSync": true,
+  "cSpell.words": [
+    "covid"
+  ]
 }
