Update latest foam settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
   "git.rebaseWhenSync": true,
   "cSpell.words": [
     "covid"
-  ]
+  ],
+  "vscodeMarkdownNotes.slugifyMethod": "github-slugger"
 }
